parser1.output
Grammar

    0 $accept: Goal $end

    1 Goal: MainClass ClassDeclarationList EOFL

    2 ClassDeclarationList: ClassDeclarationList ClassDeclaration
    3                     | %empty

    4 MainClass: CLASSWORD IDENTIFIER FOBRACE PUBLICWORD STATICWORD VOIDWORD MAINWORD OBRACE STRINGWORD SQOBRACE SQEBRACE IDENTIFIER EBRACE FOBRACE Statement FEBRACE FEBRACE

    5 ClassDeclaration: CLASSWORD IDENTIFIER Extension FOBRACE VarDeclarationList MethodDeclarationList FEBRACE

    6 Extension: EXTENSIONWORD IDENTIFIER
    7          | %empty

    8 VarDeclarationList: VarDeclarationList VarDeclaration
    9                   | %empty

   10 VarDeclaration: Type IDENTIFIER SEMICOLON

   11 MethodDeclarationList: MethodDeclarationList MethodDeclaration
   12                      | %empty

   13 MethodDeclaration: ScopeAttribute Type IDENTIFIER OBRACE ArgumentList EBRACE FOBRACE VarDeclarationList StatementList RETURNWORD Expression SEMICOLON FEBRACE

   14 ScopeAttribute: PUBLICWORD
   15               | PRIVATEWORD

   16 ArgumentList: Type IDENTIFIER COMMA ArgumentList
   17             | Type IDENTIFIER
   18             | %empty

   19 Type: INTWORD SQOBRACE SQEBRACE
   20     | BOOLWORD
   21     | INTWORD
   22     | IDENTIFIER

   23 StatementList: Statement StatementList
   24              | %empty
   25              | Err SEMICOLON StatementList

   26 Statement: FOBRACE StatementList FEBRACE
   27          | IFWORD OBRACE Expression EBRACE Statement ELSEWORD Statement
   28          | WHILEWORD OBRACE Expression EBRACE Statement
   29          | PRINTWORD OBRACE Expression EBRACE SEMICOLON
   30          | IDENTIFIER ASSIGN Expression SEMICOLON
   31          | IDENTIFIER SQOBRACE Expression SQEBRACE ASSIGN Expression SEMICOLON

   32 ExpressionList: Expression COMMA ExpressionList
   33               | Expression
   34               | %empty

   35 Expression: Expression PLUS Expression
   36           | Expression MINUS Expression
   37           | Expression MULTIPLY Expression
   38           | Expression MOD Expression
   39           | Expression AND Expression
   40           | Expression OR Expression
   41           | Expression LESS Expression
   42           | Expression GREATER Expression
   43           | Expression EQUAL Expression
   44           | Expression SQOBRACE Expression SQEBRACE
   45           | Expression DOT LENGTHWORD
   46           | Expression DOT IDENTIFIER OBRACE ExpressionList EBRACE
   47           | NUM
   48           | TRUE
   49           | FALSE
   50           | IDENTIFIER
   51           | THISWORD
   52           | NEWWORD INTWORD SQOBRACE Expression SQEBRACE
   53           | NEWWORD IDENTIFIER OBRACE EBRACE
   54           | OBRACE Expression EBRACE
   55           | NOT Expression

   56 Err: error


Terminals, with rules where they appear

$end (0) 0
error (256) 56
FOBRACE (258) 4 5 13 26
FEBRACE (259) 4 5 13 26
SQOBRACE (260) 4 19 31 44 52
SQEBRACE (261) 4 19 31 44 52
OBRACE (262) 4 13 27 28 29 46 53 54
EBRACE (263) 4 13 27 28 29 46 53 54
PLUS (264) 35
MINUS (265) 36
MULTIPLY (266) 37
MOD (267) 38
SEMICOLON (268) 10 13 25 29 30 31
COMMA (269) 16 32
DOT (270) 45 46
NOT (271) 55
OR (272) 40
AND (273) 39
LESS (274) 41
GREATER (275) 42
EQUAL (276) 43
IFWORD (277) 27
ELSEWORD (278) 27
WHILEWORD (279) 28
ASSIGN (280) 30 31
EOFL (281) 1
STRINGWORD (282) 4
BOOLWORD (283) 20
INTWORD (284) 19 21 52
CLASSWORD (285) 4 5
NEWWORD (286) 52 53
THISWORD (287) 51
PUBLICWORD (288) 4 14
PRIVATEWORD (289) 15
STATICWORD (290) 4
VOIDWORD (291) 4
RETURNWORD (292) 13
MAINWORD (293) 4
EXTENSIONWORD (294) 6
PRINTWORD (295) 29
LENGTHWORD (296) 45
TRUE (297) 48
FALSE (298) 49
IDENTIFIER (299) 4 5 6 10 13 16 17 22 30 31 46 50 53
NUM (300) 47


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
Goal (47)
    on left: 1, on right: 0
ClassDeclarationList (48)
    on left: 2 3, on right: 1 2
MainClass (49)
    on left: 4, on right: 1
ClassDeclaration (50)
    on left: 5, on right: 2
Extension (51)
    on left: 6 7, on right: 5
VarDeclarationList (52)
    on left: 8 9, on right: 5 8 13
VarDeclaration (53)
    on left: 10, on right: 8
MethodDeclarationList (54)
    on left: 11 12, on right: 5 11
MethodDeclaration (55)
    on left: 13, on right: 11
ScopeAttribute (56)
    on left: 14 15, on right: 13
ArgumentList (57)
    on left: 16 17 18, on right: 13 16
Type (58)
    on left: 19 20 21 22, on right: 10 13 16 17
StatementList (59)
    on left: 23 24 25, on right: 13 23 25 26
Statement (60)
    on left: 26 27 28 29 30 31, on right: 4 23 27 28
ExpressionList (61)
    on left: 32 33 34, on right: 32 46
Expression (62)
    on left: 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52
    53 54 55, on right: 13 27 28 29 30 31 32 33 35 36 37 38 39 40 41
    42 43 44 45 46 52 54 55
Err (63)
    on left: 56, on right: 25


State 0

    0 $accept: . Goal $end

    CLASSWORD  shift, and go to state 1

    Goal       go to state 2
    MainClass  go to state 3


State 1

    4 MainClass: CLASSWORD . IDENTIFIER FOBRACE PUBLICWORD STATICWORD VOIDWORD MAINWORD OBRACE STRINGWORD SQOBRACE SQEBRACE IDENTIFIER EBRACE FOBRACE Statement FEBRACE FEBRACE

    IDENTIFIER  shift, and go to state 4


State 2

    0 $accept: Goal . $end

    $end  shift, and go to state 5


State 3

    1 Goal: MainClass . ClassDeclarationList EOFL

    $default  reduce using rule 3 (ClassDeclarationList)

    ClassDeclarationList  go to state 6


State 4

    4 MainClass: CLASSWORD IDENTIFIER . FOBRACE PUBLICWORD STATICWORD VOIDWORD MAINWORD OBRACE STRINGWORD SQOBRACE SQEBRACE IDENTIFIER EBRACE FOBRACE Statement FEBRACE FEBRACE

    FOBRACE  shift, and go to state 7


State 5

    0 $accept: Goal $end .

    $default  accept


State 6

    1 Goal: MainClass ClassDeclarationList . EOFL
    2 ClassDeclarationList: ClassDeclarationList . ClassDeclaration

    EOFL       shift, and go to state 8
    CLASSWORD  shift, and go to state 9

    ClassDeclaration  go to state 10


State 7

    4 MainClass: CLASSWORD IDENTIFIER FOBRACE . PUBLICWORD STATICWORD VOIDWORD MAINWORD OBRACE STRINGWORD SQOBRACE SQEBRACE IDENTIFIER EBRACE FOBRACE Statement FEBRACE FEBRACE

    PUBLICWORD  shift, and go to state 11


State 8

    1 Goal: MainClass ClassDeclarationList EOFL .

    $default  reduce using rule 1 (Goal)


State 9

    5 ClassDeclaration: CLASSWORD . IDENTIFIER Extension FOBRACE VarDeclarationList MethodDeclarationList FEBRACE

    IDENTIFIER  shift, and go to state 12


State 10

    2 ClassDeclarationList: ClassDeclarationList ClassDeclaration .

    $default  reduce using rule 2 (ClassDeclarationList)


State 11

    4 MainClass: CLASSWORD IDENTIFIER FOBRACE PUBLICWORD . STATICWORD VOIDWORD MAINWORD OBRACE STRINGWORD SQOBRACE SQEBRACE IDENTIFIER EBRACE FOBRACE Statement FEBRACE FEBRACE

    STATICWORD  shift, and go to state 13


State 12

    5 ClassDeclaration: CLASSWORD IDENTIFIER . Extension FOBRACE VarDeclarationList MethodDeclarationList FEBRACE

    EXTENSIONWORD  shift, and go to state 14

    $default  reduce using rule 7 (Extension)

    Extension  go to state 15


State 13

    4 MainClass: CLASSWORD IDENTIFIER FOBRACE PUBLICWORD STATICWORD . VOIDWORD MAINWORD OBRACE STRINGWORD SQOBRACE SQEBRACE IDENTIFIER EBRACE FOBRACE Statement FEBRACE FEBRACE

    VOIDWORD  shift, and go to state 16


State 14

    6 Extension: EXTENSIONWORD . IDENTIFIER

    IDENTIFIER  shift, and go to state 17


State 15

    5 ClassDeclaration: CLASSWORD IDENTIFIER Extension . FOBRACE VarDeclarationList MethodDeclarationList FEBRACE

    FOBRACE  shift, and go to state 18


State 16

    4 MainClass: CLASSWORD IDENTIFIER FOBRACE PUBLICWORD STATICWORD VOIDWORD . MAINWORD OBRACE STRINGWORD SQOBRACE SQEBRACE IDENTIFIER EBRACE FOBRACE Statement FEBRACE FEBRACE

    MAINWORD  shift, and go to state 19


State 17

    6 Extension: EXTENSIONWORD IDENTIFIER .

    $default  reduce using rule 6 (Extension)


State 18

    5 ClassDeclaration: CLASSWORD IDENTIFIER Extension FOBRACE . VarDeclarationList MethodDeclarationList FEBRACE

    $default  reduce using rule 9 (VarDeclarationList)

    VarDeclarationList  go to state 20


State 19

    4 MainClass: CLASSWORD IDENTIFIER FOBRACE PUBLICWORD STATICWORD VOIDWORD MAINWORD . OBRACE STRINGWORD SQOBRACE SQEBRACE IDENTIFIER EBRACE FOBRACE Statement FEBRACE FEBRACE

    OBRACE  shift, and go to state 21


State 20

    5 ClassDeclaration: CLASSWORD IDENTIFIER Extension FOBRACE VarDeclarationList . MethodDeclarationList FEBRACE
    8 VarDeclarationList: VarDeclarationList . VarDeclaration

    BOOLWORD    shift, and go to state 22
    INTWORD     shift, and go to state 23
    IDENTIFIER  shift, and go to state 24

    $default  reduce using rule 12 (MethodDeclarationList)

    VarDeclaration         go to state 25
    MethodDeclarationList  go to state 26
    Type                   go to state 27


State 21

    4 MainClass: CLASSWORD IDENTIFIER FOBRACE PUBLICWORD STATICWORD VOIDWORD MAINWORD OBRACE . STRINGWORD SQOBRACE SQEBRACE IDENTIFIER EBRACE FOBRACE Statement FEBRACE FEBRACE

    STRINGWORD  shift, and go to state 28


State 22

   20 Type: BOOLWORD .

    $default  reduce using rule 20 (Type)


State 23

   19 Type: INTWORD . SQOBRACE SQEBRACE
   21     | INTWORD .

    SQOBRACE  shift, and go to state 29

    $default  reduce using rule 21 (Type)


State 24

   22 Type: IDENTIFIER .

    $default  reduce using rule 22 (Type)


State 25

    8 VarDeclarationList: VarDeclarationList VarDeclaration .

    $default  reduce using rule 8 (VarDeclarationList)


State 26

    5 ClassDeclaration: CLASSWORD IDENTIFIER Extension FOBRACE VarDeclarationList MethodDeclarationList . FEBRACE
   11 MethodDeclarationList: MethodDeclarationList . MethodDeclaration

    FEBRACE      shift, and go to state 30
    PUBLICWORD   shift, and go to state 31
    PRIVATEWORD  shift, and go to state 32

    MethodDeclaration  go to state 33
    ScopeAttribute     go to state 34


State 27

   10 VarDeclaration: Type . IDENTIFIER SEMICOLON

    IDENTIFIER  shift, and go to state 35


State 28

    4 MainClass: CLASSWORD IDENTIFIER FOBRACE PUBLICWORD STATICWORD VOIDWORD MAINWORD OBRACE STRINGWORD . SQOBRACE SQEBRACE IDENTIFIER EBRACE FOBRACE Statement FEBRACE FEBRACE

    SQOBRACE  shift, and go to state 36


State 29

   19 Type: INTWORD SQOBRACE . SQEBRACE

    SQEBRACE  shift, and go to state 37


State 30

    5 ClassDeclaration: CLASSWORD IDENTIFIER Extension FOBRACE VarDeclarationList MethodDeclarationList FEBRACE .

    $default  reduce using rule 5 (ClassDeclaration)


State 31

   14 ScopeAttribute: PUBLICWORD .

    $default  reduce using rule 14 (ScopeAttribute)


State 32

   15 ScopeAttribute: PRIVATEWORD .

    $default  reduce using rule 15 (ScopeAttribute)


State 33

   11 MethodDeclarationList: MethodDeclarationList MethodDeclaration .

    $default  reduce using rule 11 (MethodDeclarationList)


State 34

   13 MethodDeclaration: ScopeAttribute . Type IDENTIFIER OBRACE ArgumentList EBRACE FOBRACE VarDeclarationList StatementList RETURNWORD Expression SEMICOLON FEBRACE

    BOOLWORD    shift, and go to state 22
    INTWORD     shift, and go to state 23
    IDENTIFIER  shift, and go to state 24

    Type  go to state 38


State 35

   10 VarDeclaration: Type IDENTIFIER . SEMICOLON

    SEMICOLON  shift, and go to state 39


State 36

    4 MainClass: CLASSWORD IDENTIFIER FOBRACE PUBLICWORD STATICWORD VOIDWORD MAINWORD OBRACE STRINGWORD SQOBRACE . SQEBRACE IDENTIFIER EBRACE FOBRACE Statement FEBRACE FEBRACE

    SQEBRACE  shift, and go to state 40


State 37

   19 Type: INTWORD SQOBRACE SQEBRACE .

    $default  reduce using rule 19 (Type)


State 38

   13 MethodDeclaration: ScopeAttribute Type . IDENTIFIER OBRACE ArgumentList EBRACE FOBRACE VarDeclarationList StatementList RETURNWORD Expression SEMICOLON FEBRACE

    IDENTIFIER  shift, and go to state 41


State 39

   10 VarDeclaration: Type IDENTIFIER SEMICOLON .

    $default  reduce using rule 10 (VarDeclaration)


State 40

    4 MainClass: CLASSWORD IDENTIFIER FOBRACE PUBLICWORD STATICWORD VOIDWORD MAINWORD OBRACE STRINGWORD SQOBRACE SQEBRACE . IDENTIFIER EBRACE FOBRACE Statement FEBRACE FEBRACE

    IDENTIFIER  shift, and go to state 42


State 41

   13 MethodDeclaration: ScopeAttribute Type IDENTIFIER . OBRACE ArgumentList EBRACE FOBRACE VarDeclarationList StatementList RETURNWORD Expression SEMICOLON FEBRACE

    OBRACE  shift, and go to state 43


State 42

    4 MainClass: CLASSWORD IDENTIFIER FOBRACE PUBLICWORD STATICWORD VOIDWORD MAINWORD OBRACE STRINGWORD SQOBRACE SQEBRACE IDENTIFIER . EBRACE FOBRACE Statement FEBRACE FEBRACE

    EBRACE  shift, and go to state 44


State 43

   13 MethodDeclaration: ScopeAttribute Type IDENTIFIER OBRACE . ArgumentList EBRACE FOBRACE VarDeclarationList StatementList RETURNWORD Expression SEMICOLON FEBRACE

    BOOLWORD    shift, and go to state 22
    INTWORD     shift, and go to state 23
    IDENTIFIER  shift, and go to state 24

    $default  reduce using rule 18 (ArgumentList)

    ArgumentList  go to state 45
    Type          go to state 46


State 44

    4 MainClass: CLASSWORD IDENTIFIER FOBRACE PUBLICWORD STATICWORD VOIDWORD MAINWORD OBRACE STRINGWORD SQOBRACE SQEBRACE IDENTIFIER EBRACE . FOBRACE Statement FEBRACE FEBRACE

    FOBRACE  shift, and go to state 47


State 45

   13 MethodDeclaration: ScopeAttribute Type IDENTIFIER OBRACE ArgumentList . EBRACE FOBRACE VarDeclarationList StatementList RETURNWORD Expression SEMICOLON FEBRACE

    EBRACE  shift, and go to state 48


State 46

   16 ArgumentList: Type . IDENTIFIER COMMA ArgumentList
   17             | Type . IDENTIFIER

    IDENTIFIER  shift, and go to state 49


State 47

    4 MainClass: CLASSWORD IDENTIFIER FOBRACE PUBLICWORD STATICWORD VOIDWORD MAINWORD OBRACE STRINGWORD SQOBRACE SQEBRACE IDENTIFIER EBRACE FOBRACE . Statement FEBRACE FEBRACE

    FOBRACE     shift, and go to state 50
    IFWORD      shift, and go to state 51
    WHILEWORD   shift, and go to state 52
    PRINTWORD   shift, and go to state 53
    IDENTIFIER  shift, and go to state 54

    Statement  go to state 55


State 48

   13 MethodDeclaration: ScopeAttribute Type IDENTIFIER OBRACE ArgumentList EBRACE . FOBRACE VarDeclarationList StatementList RETURNWORD Expression SEMICOLON FEBRACE

    FOBRACE  shift, and go to state 56


State 49

   16 ArgumentList: Type IDENTIFIER . COMMA ArgumentList
   17             | Type IDENTIFIER .

    COMMA  shift, and go to state 57

    $default  reduce using rule 17 (ArgumentList)


State 50

   26 Statement: FOBRACE . StatementList FEBRACE

    error       shift, and go to state 58
    FOBRACE     shift, and go to state 50
    IFWORD      shift, and go to state 51
    WHILEWORD   shift, and go to state 52
    PRINTWORD   shift, and go to state 53
    IDENTIFIER  shift, and go to state 54

    FEBRACE  reduce using rule 24 (StatementList)

    StatementList  go to state 59
    Statement      go to state 60
    Err            go to state 61


State 51

   27 Statement: IFWORD . OBRACE Expression EBRACE Statement ELSEWORD Statement

    OBRACE  shift, and go to state 62


State 52

   28 Statement: WHILEWORD . OBRACE Expression EBRACE Statement

    OBRACE  shift, and go to state 63


State 53

   29 Statement: PRINTWORD . OBRACE Expression EBRACE SEMICOLON

    OBRACE  shift, and go to state 64


State 54

   30 Statement: IDENTIFIER . ASSIGN Expression SEMICOLON
   31          | IDENTIFIER . SQOBRACE Expression SQEBRACE ASSIGN Expression SEMICOLON

    SQOBRACE  shift, and go to state 65
    ASSIGN    shift, and go to state 66


State 55

    4 MainClass: CLASSWORD IDENTIFIER FOBRACE PUBLICWORD STATICWORD VOIDWORD MAINWORD OBRACE STRINGWORD SQOBRACE SQEBRACE IDENTIFIER EBRACE FOBRACE Statement . FEBRACE FEBRACE

    FEBRACE  shift, and go to state 67


State 56

   13 MethodDeclaration: ScopeAttribute Type IDENTIFIER OBRACE ArgumentList EBRACE FOBRACE . VarDeclarationList StatementList RETURNWORD Expression SEMICOLON FEBRACE

    $default  reduce using rule 9 (VarDeclarationList)

    VarDeclarationList  go to state 68


State 57

   16 ArgumentList: Type IDENTIFIER COMMA . ArgumentList

    BOOLWORD    shift, and go to state 22
    INTWORD     shift, and go to state 23
    IDENTIFIER  shift, and go to state 24

    $default  reduce using rule 18 (ArgumentList)

    ArgumentList  go to state 69
    Type          go to state 46


State 58

   56 Err: error .

    $default  reduce using rule 56 (Err)


State 59

   26 Statement: FOBRACE StatementList . FEBRACE

    FEBRACE  shift, and go to state 70


State 60

   23 StatementList: Statement . StatementList

    error       shift, and go to state 58
    FOBRACE     shift, and go to state 50
    IFWORD      shift, and go to state 51
    WHILEWORD   shift, and go to state 52
    PRINTWORD   shift, and go to state 53
    IDENTIFIER  shift, and go to state 54

    FEBRACE     reduce using rule 24 (StatementList)
    RETURNWORD  reduce using rule 24 (StatementList)

    StatementList  go to state 71
    Statement      go to state 60
    Err            go to state 61


State 61

   25 StatementList: Err . SEMICOLON StatementList

    SEMICOLON  shift, and go to state 72


State 62

   27 Statement: IFWORD OBRACE . Expression EBRACE Statement ELSEWORD Statement

    OBRACE      shift, and go to state 73
    NOT         shift, and go to state 74
    NEWWORD     shift, and go to state 75
    THISWORD    shift, and go to state 76
    TRUE        shift, and go to state 77
    FALSE       shift, and go to state 78
    IDENTIFIER  shift, and go to state 79
    NUM         shift, and go to state 80

    Expression  go to state 81


State 63

   28 Statement: WHILEWORD OBRACE . Expression EBRACE Statement

    OBRACE      shift, and go to state 73
    NOT         shift, and go to state 74
    NEWWORD     shift, and go to state 75
    THISWORD    shift, and go to state 76
    TRUE        shift, and go to state 77
    FALSE       shift, and go to state 78
    IDENTIFIER  shift, and go to state 79
    NUM         shift, and go to state 80

    Expression  go to state 82


State 64

   29 Statement: PRINTWORD OBRACE . Expression EBRACE SEMICOLON

    OBRACE      shift, and go to state 73
    NOT         shift, and go to state 74
    NEWWORD     shift, and go to state 75
    THISWORD    shift, and go to state 76
    TRUE        shift, and go to state 77
    FALSE       shift, and go to state 78
    IDENTIFIER  shift, and go to state 79
    NUM         shift, and go to state 80

    Expression  go to state 83


State 65

   31 Statement: IDENTIFIER SQOBRACE . Expression SQEBRACE ASSIGN Expression SEMICOLON

    OBRACE      shift, and go to state 73
    NOT         shift, and go to state 74
    NEWWORD     shift, and go to state 75
    THISWORD    shift, and go to state 76
    TRUE        shift, and go to state 77
    FALSE       shift, and go to state 78
    IDENTIFIER  shift, and go to state 79
    NUM         shift, and go to state 80

    Expression  go to state 84


State 66

   30 Statement: IDENTIFIER ASSIGN . Expression SEMICOLON

    OBRACE      shift, and go to state 73
    NOT         shift, and go to state 74
    NEWWORD     shift, and go to state 75
    THISWORD    shift, and go to state 76
    TRUE        shift, and go to state 77
    FALSE       shift, and go to state 78
    IDENTIFIER  shift, and go to state 79
    NUM         shift, and go to state 80

    Expression  go to state 85


State 67

    4 MainClass: CLASSWORD IDENTIFIER FOBRACE PUBLICWORD STATICWORD VOIDWORD MAINWORD OBRACE STRINGWORD SQOBRACE SQEBRACE IDENTIFIER EBRACE FOBRACE Statement FEBRACE . FEBRACE

    FEBRACE  shift, and go to state 86


State 68

    8 VarDeclarationList: VarDeclarationList . VarDeclaration
   13 MethodDeclaration: ScopeAttribute Type IDENTIFIER OBRACE ArgumentList EBRACE FOBRACE VarDeclarationList . StatementList RETURNWORD Expression SEMICOLON FEBRACE

    error       shift, and go to state 58
    FOBRACE     shift, and go to state 50
    IFWORD      shift, and go to state 51
    WHILEWORD   shift, and go to state 52
    BOOLWORD    shift, and go to state 22
    INTWORD     shift, and go to state 23
    PRINTWORD   shift, and go to state 53
    IDENTIFIER  shift, and go to state 87

    RETURNWORD  reduce using rule 24 (StatementList)

    VarDeclaration  go to state 25
    Type            go to state 27
    StatementList   go to state 88
    Statement       go to state 60
    Err             go to state 61


State 69

   16 ArgumentList: Type IDENTIFIER COMMA ArgumentList .

    $default  reduce using rule 16 (ArgumentList)


State 70

   26 Statement: FOBRACE StatementList FEBRACE .

    $default  reduce using rule 26 (Statement)


State 71

   23 StatementList: Statement StatementList .

    $default  reduce using rule 23 (StatementList)


State 72

   25 StatementList: Err SEMICOLON . StatementList

    error       shift, and go to state 58
    FOBRACE     shift, and go to state 50
    IFWORD      shift, and go to state 51
    WHILEWORD   shift, and go to state 52
    PRINTWORD   shift, and go to state 53
    IDENTIFIER  shift, and go to state 54

    FEBRACE     reduce using rule 24 (StatementList)
    RETURNWORD  reduce using rule 24 (StatementList)

    StatementList  go to state 89
    Statement      go to state 60
    Err            go to state 61


State 73

   54 Expression: OBRACE . Expression EBRACE
